// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`GlobalMessage renders correctly given a success type 1`] = `
<DocumentFragment>
  <div
    class="auth0-global-message auth0-global-message-success"
  >
    <span
      class="animated fadeInUp"
    >
      Success!
    </span>
  </div>
</DocumentFragment>
`;

exports[`GlobalMessage renders correctly given an error type 1`] = `
<DocumentFragment>
  <div
    class="auth0-global-message auth0-global-message-error"
  >
    <span
      class="animated fadeInUp"
    >
      An error occurred.
    </span>
  </div>
</DocumentFragment>
`;

exports[`GlobalMessage renders correctly given an info type 1`] = `
<DocumentFragment>
  <div
    class="auth0-global-message auth0-global-message-info"
  >
    <span
      class="animated fadeInUp"
    >
      Some additional information.
    </span>
  </div>
</DocumentFragment>
`;
